﻿0.7.6.4 (2021-08-31)
-------------------- 
+ Added ExHandler capabilities to MiniFilterChain 

0.7.6.3 (2021-08-23)
-------------------- 
+ MiniFilterChain evalute ALWAYS step in case of Exception on previous step

0.7.6.2 (2021-08-23)
-------------------- 
+ MiniFilterChain evalute ALWAYS step in case of Exception on previous step

0.7.6.1 (2021-08-03)
-------------------- 
+ Default toString for result
+ Bump commons-compress from 1.20 to 1.21

0.7.6.0 (2021-07-01)
-------------------- 
+ new fj-bom 0.1.0 as parent pom

0.7.5.11 (2021-06-11)
-------------------- 
+ PropertyEntry now implements KeyString

0.7.5.10 (2021-05-04)
-------------------- 
+ PreloadByteArrayDataHandler e PreloadCharArrayDataHandler serializable

0.7.5.9 (2021-03-26)
-------------------- 
+ DefaultLoadResultNG now support generic sql statement

0.7.5.8 (2021-03-15)
-------------------- 
+ Added support for daogen service result

0.7.5.7 (2021-03-07)
-------------------- 
+ Added ItemCheck interface

0.7.5.6 (2021-03-06)
-------------------- 
+ Added LoadResultNG interface

0.7.5.5 (2021-03-05)
-------------------- 
+ Added DaoResult and DaoResultList interface

0.7.5.4 (2021-03-04)
-------------------- 
+ DAOUtilsNG for handling query without closing connection

0.7.5.3 (2021-02-25)
-------------------- 
+ SimpleJavaGenerator has now an option to avoid generating custom part comments

0.7.5.2 (2021-02-24)
-------------------- 
+ MiniFilterChain automatically propagate chainId

0.7.5.1 (2021-02-24)
-------------------- 
+ Added some functions to AttributeHolderDefault

0.7.5.0 (2021-02-14)
-------------------- 
+ FactoryCatalog can now read custom configuration parameters

0.7.4.10 (2021-01-31)
-------------------- 
+ Correct optional message in ValidatorRegex

0.7.4.9 (2021-01-30) [DEPRECATED]
-------------------- 
+ Correct optional message in ValidatorRegex

0.7.4.8 (2021-01-03)
-------------------- 
+ Added wrappers utilities