@@ -1,0 +1,6 @@
+TestPropKey1=TestPropValue1
+prefix1-TestPropKey1=prefix1-TestPropValue1
+prefix2-TestPropKey1=prefix2-TestPropValue1
+TestPropKey2=TestPropValue2
+prefix1-TestPropKey2=prefix1-TestPropValue2
+prefix2-TestPropKey2=prefix2-TestPropValue2
