@@ -1,6 +1,7 @@
 ﻿0.7.6.4 (2021-08-31)
 -------------------- 
 + Added ExHandler capabilities to MiniFilterChain 
++ Added subprops utility
 
 0.7.6.3 (2021-08-23)
 -------------------- 
